--- a/services/api/package.json
+++ b/services/api/package.json
@@ -1,16 +1,38 @@
 {
   "name": "my-films-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "description": "Just for fun",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "app:start": "nodemon",
+    "migration:create": "db-migrate create --sql-file -m migrate/migrations --config migrate/config.json --",
+    "migration:up": "db-migrate up -m migrate/migrations --config migrate/config.json --"
   },
-  "author": "",
+  "author": "Dima Ivanenko",
   "license": "ISC",
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/dotenv": "^6.1.0",
+    "@types/express": "^4.16.0",
+    "@types/express-session": "^1.15.11",
+    "@types/passport": "^0.4.7",
+    "@types/passport-google-oauth": "^1.0.39",
+    "@types/pg": "^7.4.11",
     "nodemon": "^1.18.6",
     "ts-node": "^7.0.1",
     "typescript": "^3.1.6"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "db-migrate": "^0.11.4",
+    "db-migrate-pg": "^0.4.0",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.4",
+    "express-session": "^1.15.6",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
+    "pg": "^7.6.1",
+    "postgraphile": "^4.0.1"
   }
 }
