--- a/services/api/tsconfig.json
+++ b/services/api/tsconfig.json
@@ -4,7 +4,7 @@
     "target": "es5",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
     "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
     /* Specify library files to be included in the compilation. */
-    "lib": [ "es2015" ],
+    "lib": [ "es2015", "es6" ],
     // "allowJs": true,                       /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
     // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
@@ -45,7 +45,10 @@
     "typeRoots": [
       "node_module/@types"
     ],
-    // "types": [],                           /* Type declaration files to be included in compilation. */
+    /* Type declaration files to be included in compilation. */
+    "types": [
+      "reflect-metadata"
+    ],
     // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     "esModuleInterop": true,                   /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
     // "preserveSymlinks": true,              /* Do not resolve the real path of symlinks. */
