--- a/services/api/package.json
+++ b/services/api/package.json
@@ -24,6 +24,7 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.118",
     "body-parser": "^1.18.3",
     "db-migrate": "^0.11.4",
     "db-migrate-pg": "^0.4.0",
@@ -31,6 +32,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "inversify": "^5.0.1",
+    "lodash": "^4.17.11",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "pg": "^7.6.1",
