--- a/services/api/tsconfig.json
+++ b/services/api/tsconfig.json
@@ -47,7 +47,8 @@
     ],
     /* Type declaration files to be included in compilation. */
     "types": [
-      "reflect-metadata"
+      "reflect-metadata",
+      "node"
     ],
     // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     "esModuleInterop": true,                   /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
