--- a/services/synchronizer/package.json
+++ b/services/synchronizer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-films-tmdb-sync",
+  "name": "my-films-synchronizer",
   "version": "1.0.0",
   "private": true,
   "description": "Just for fun",
@@ -11,17 +11,16 @@
   "license": "ISC",
   "devDependencies": {
     "@types/async": "^2.0.50",
+    "@types/debug": "0.0.31",
     "@types/lodash": "^4.14.119",
     "@types/node": "^10.12.12",
-    "@types/tress": "^1.0.1",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2"
   },
   "dependencies": {
     "async": "^2.6.1",
     "axios": "^0.18.0",
-    "lodash": "^4.17.11",
-    "request-rate-limiter": "^1.0.2",
-    "tress": "^1.1.4"
+    "debug": "^4.1.1",
+    "lodash": "^4.17.11"
   }
 }
