--- a/services/api/package.json
+++ b/services/api/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
-    "@types/dotenv": "^6.1.0",
+    "@types/debug": "0.0.31",
     "@types/express": "^4.16.0",
     "@types/express-session": "^1.15.11",
+    "@types/joi": "^14.0.1",
+    "@types/lodash": "^4.14.119",
     "@types/passport": "^0.4.7",
     "@types/passport-google-oauth": "^1.0.39",
     "@types/pg": "^7.4.11",
@@ -24,14 +26,14 @@
     "typescript": "^3.1.6"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.118",
     "body-parser": "^1.18.3",
     "db-migrate": "^0.11.4",
     "db-migrate-pg": "^0.4.0",
-    "dotenv": "^6.1.0",
+    "debug": "^4.1.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "inversify": "^5.0.1",
+    "joi": "^14.3.1",
     "lodash": "^4.17.11",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
